--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "nodejs",
+  "name": "wild-west-forum",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "main": "server.js",
   "dependencies": {
-    "cookie-parser": "^1.4.7",
-    "express": "^5.1.0",
-    "express-handlebars": "^8.0.3",
-    "express-session": "^1.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
+    "express-session": "^1.17.3",
+    "body-parser": "^1.20.2"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
+
